<resources>
    <string name="app_name">WiD</string>
    <string name="app_name2">what i did</string>
    <string name="bottom_navigation_label_1">등록</string>
    <string name="bottom_navigation_label_2">목록</string>
    <string name="bottom_navigation_label_3">검색</string>

    <string name="title_1">공부</string>
    <string name="title_2">일</string>
    <string name="title_3">독서</string>
    <string name="title_4">운동</string>
    <string name="title_5">잠</string>
    <string name="title_6">이동</string>
    <string name="title_7">취미</string>
    <string name="title_8">기타</string>

    <string name="zero_duration">00:00:00</string>
    <string name="start">시작</string>
    <string name="finish">종료</string>
    <string name="reset">초기화</string>

    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string name="wid_no">번호</string>
    <string name="title">제목</string>
    <string name="date">날짜</string>
    <string name="start_time">시작</string>
    <string name="finish_time">종료</string>
    <string name="duration">경과</string>
    <string name="detail">세부 사항</string>

</resources>