<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/decreaseDateButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_left_48"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <ImageButton
            android:id="@+id/increaseDateButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_right_48"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfWeekLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dateLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:gravity="center"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dayOfWeekLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_light_gray"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wiDHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/wiDColorRectangle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/title"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="최고 (%)"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="총합 (%)"
                />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>

        <LinearLayout
            android:id="@+id/wiDHolderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/wiDHeaderLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>