<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/leftTriangle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_left_48"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <ImageButton
            android:id="@+id/rightTriangle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_right_48"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfWeekLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textSize="18sp"
            android:textColor="@color/sunday_red"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textSize="18sp"
            android:textColor="@color/saturday_blue"
            android:gravity="center"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/dayOfWeekLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </GridLayout>

    <LinearLayout
        android:id="@+id/statisticsTabLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="번호"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="제목"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="전체"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="최고"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statisticsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/statisticsTabLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>