<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/leftTriangle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_left_48"
            android:background="@android:color/transparent"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dayOfWeekTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/rightTriangle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_right_48"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <andpact.project.wid.CircleView
        android:id="@+id/circleView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@id/pieChart"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        app:layout_constraintStart_toStartOf="@id/pieChart"
        app:layout_constraintEnd_toEndOf="@id/pieChart" />

    <LinearLayout
        android:id="@+id/tapLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/circleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/wid_no"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/title"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/start_time"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/finish_time"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/duration"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/detail"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tapLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
