<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wid_bg"
            android:padding="10dp"
            android:elevation="10dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/app_name"/>

            <LinearLayout
                android:id="@+id/titleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager2"
                        android:background="@drawable/wid_field_bg"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/titleLeftButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_left_36"
                        android:background="@android:color/transparent" />

                    <ImageButton
                        android:id="@+id/titleRightButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_right_36"
                        android:background="@android:color/transparent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/wid_field_bg"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dayOfWeekTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold" />

<!--                    <com.google.android.material.textview.MaterialTextView-->
<!--                        android:id="@+id/parenthesisTextView"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="25sp"-->
<!--                        android:textStyle="bold" />-->

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/startTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/start_time" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/startTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/wid_field_bg"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/finishTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/finish_time" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/finishTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/wid_field_bg"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/durationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/duration" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/underOneMinuteTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:textSize="11sp"
                        android:textColor="@color/sunday_red"
                        android:text="*1분 이상 필요" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/durationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/wid_field_bg"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sunday_red"
            app:cornerRadius="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/saturday_blue"
            app:cornerRadius="5dp"
            android:visibility="gone"
            android:text="@string/finish"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            app:cornerRadius="5dp"
            android:visibility="gone"
            android:text="@string/reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>